<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Shopper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Add</string>
    <string name="button2">Delete</string>
    <string name="button3">Edit</string>
    <string name="button4">Bought</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="textview_item_name">Item Name</string>
    <string name="textview_item_count">Number</string>
    <string name="textview_store_name">Where</string>
    <string name="textview_deadline">Deadline</string>
    <string name="button_add">Add</string>
    <string name="CheckBox" />
    <string name="quick_add">Quick Add</string>
    <string name="button_edit_price">Edit Price</string>
    <string name="button_clear">Clear</string>
    <string name="button_back">Back</string>
    <string name="title_activity_bought">BoughtActivity</string>
    <string name="button_back_to_shop">Go To Shopping List</string>
    <string name="button_to_bought">Go To History</string>
    <string name="title_activity_edit_item">EditItem</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_edit_price">EditPrice</string>
    <string name="textview_item_price">Price ($)</string>
    <string name="show_details">Show Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="sort_by_deadline">Sort By Deadline</string>
    <string name="no_sort">No Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="title_activity_main">Shopping List</string>
    <string name="textview_date">Purchase Date</string>

</resources>
