<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gmail.biweiguo.smartshopper.MainActivity" >

        <item
        android:id="@+id/show_details"
        android:title="@string/show_details"
        android:showAsAction="always"/>
        
        <item
        android:id="@+id/hide_details"
        android:title="@string/hide_details"
        android:showAsAction="always"/>
        
        <item
        android:id="@+id/sort_by_deadline"
        android:title="@string/sort_by_deadline"
        android:showAsAction="always"/>
        
        <item
        android:id="@+id/no_sort"
        android:title="@string/no_sort"
        android:showAsAction="always"/>
        

</menu>
