<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
    android:id="@+id/linearLayout_item_name1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    >
    
        <TextView
            android:id="@+id/textview_item_name1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"            
            android:text="@string/textview_item_name" />
        
       <EditText
            android:id="@+id/textedit_item_name1"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>
  
    <LinearLayout
    android:id="@+id/linearLayout_store_name1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout_item_name1"       
    >
    
        <TextView
            android:id="@+id/textview_store_name1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"            
            android:text="@string/textview_store_name" />
        
       <EditText
            android:id="@+id/textedit_store_name1"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
    android:id="@+id/linearLayout_deadline1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout_store_name1"       
    >
    
        <TextView
            android:id="@+id/textview_deadline1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"            
            android:text="@string/textview_deadline" />
        
       <EditText
            android:id="@+id/textedit_deadline1"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_save1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout_deadline1"
        android:layout_below="@+id/linearLayout_deadline1"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="26dp"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/button_cancel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_save1"
        android:layout_alignBottom="@+id/button_save1"
        android:layout_toRightOf="@+id/button_save1"
        android:text="@string/button_cancel" />

</RelativeLayout>
