<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
    android:id="@+id/linearLayout_item_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    >
    
        <TextView
            android:id="@+id/textview_item_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"            
            android:text="@string/textview_item_name" />
        
       <EditText
            android:id="@+id/textedit_item_name"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
    android:id="@+id/linearLayout_item_count"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout_item_name"       
    >
    
        <TextView
            android:id="@+id/textview_item_count"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"            
            android:text="@string/textview_item_count" />
        
       <EditText
            android:id="@+id/textedit_item_count"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
    android:id="@+id/linearLayout_store_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout_item_count"       
    >
    
        <TextView
            android:id="@+id/textview_store_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"            
            android:text="@string/textview_store_name" />
        
       <EditText
            android:id="@+id/textedit_store_name"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
    android:id="@+id/linearLayout_deadline"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout_store_name"       
    >
    
        <TextView
            android:id="@+id/textview_deadline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"            
            android:text="@string/textview_deadline" />
        
       <EditText
            android:id="@+id/textedit_deadline"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout_deadline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"

        android:text="@string/button_add" />

</RelativeLayout>