<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="6dip" 
    	android:paddingRight="6dip"
        android:orientation="horizontal" >
        
	    <EditText
	       	android:id="@+id/text_quick_add"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:layout_weight="1"/>
	
	   	<Button
	   	    android:id="@+id/button_quick_add"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:onClick="quickAddButtonPressed"
	   	    style="?android:attr/borderlessButtonStyle"
	   	    android:text="@string/quick_add"
	   	    android:textSize="12sp"
	   	    android:layout_weight="1" />
	</LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#dbdbdb"
        android:weightSum="1" >

    	<Button
    	    android:id="@+id/button_add"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.25"
    	    android:onClick="addButtonPressed"
    	    android:text="@string/button1"
    	    style="?android:attr/borderlessButtonStyle"
    	    android:textSize="12sp" />

    	<Button
    	    android:id="@+id/button_delete"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.25"
    	    android:text="@string/button2"
    	    style="?android:attr/borderlessButtonStyle"
    	    android:textSize="12sp" />
    
    	<Button
    	    android:id="@+id/button_edit"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.25"
    	    android:onClick="editButtonPressed"
    	    android:text="@string/button3"
    	    style="?android:attr/borderlessButtonStyle"
    	    android:textSize="12sp" />

    	<Button
    	    android:id="@+id/button_bought"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.25"
    	    android:text="@string/button4"
    	    style="?android:attr/borderlessButtonStyle"
    	    android:textSize="12sp" />

     </LinearLayout>

       	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:background="#dbdbdb" >

		<TextView
		    android:id="@+id/textview_sort"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Sort By"
		    android:textSize="12sp"
		    android:layout_alignParentTop="true" />
    	
    	<Spinner
    	    android:id="@+id/spinner_sort"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignBaseline="@id/textview_sort"
    		android:layout_toRightOf="@id/textview_sort"
    		android:drawSelectorOnTop="true" />
    	
    	<ToggleButton 
    		android:id="@+id/show_details"
    		android:layout_toRightOf="@id/spinner_sort"
    	    android:layout_alignBaseline="@id/spinner_sort"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textOn="Hide Details"
		    android:textOff="Show Details"
		    style="?android:attr/borderlessButtonStyle"
		    android:onClick="onToggleClicked"/>

    </RelativeLayout>
    
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="304dp"
         android:choiceMode="multipleChoice"
         tools:listitem="@android:layout/simple_list_item_1" >

     </ListView>
        
</LinearLayout>
