<?xml version="1.0" encoding="utf-8"?>

<!--

Copyright (c) 2014 Biwei Guo
[This program is licensed under the "MIT License"]
Please see the file COPYING in the source
distribution of this software for license terms.

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="6dip" 
    	android:paddingRight="6dip"
        android:orientation="horizontal"
        android:background="#dbdbdb"
        android:weightSum="1" >

    	<Button
    	    android:id="@+id/button_edit_price"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.25"
    	    android:onClick="editPriceButtonPressed"
    	    android:text="@string/button_edit_price"
    	    style="?android:attr/borderlessButtonStyle"
    	    android:textSize="12sp" />
    	
		<View
	  		android:layout_width="1dip"
	  		android:layout_height="fill_parent"
	  		android:background="?android:attr/dividerVertical" />

    	<Button
    	    android:id="@+id/button_delete_bought"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.25"
    	    android:text="@string/button2"
    	    style="?android:attr/borderlessButtonStyle"
    	    android:textSize="12sp" />

		<View
	  		android:layout_width="1dip"
	  		android:layout_height="fill_parent"
	  		android:background="?android:attr/dividerVertical" />
  	     
    	<Button
    	    android:id="@+id/button_clear"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.25"
    	    android:text="@string/button_clear"
    	    style="?android:attr/borderlessButtonStyle"
    	    android:textSize="12sp" />

		<View
	  		android:layout_width="1dip"
	  		android:layout_height="fill_parent"
	  		android:background="?android:attr/dividerVertical" />
  	 
    	<ToggleButton 
    		android:id="@+id/show_details1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textOn="Hide Details"
		    android:textOff="Show Details"
		    android:layout_weight="0.25"
		    android:textSize="12sp"
		    style="?android:attr/borderlessButtonStyle"
		    android:onClick="onToggleClicked"/>
    	
	</LinearLayout>
     
	<View
    	android:layout_width="match_parent"
    	android:layout_height="1dip"
    	android:background="?android:attr/dividerVertical"/>
    	   	
	<RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="12dip"
        android:layout_height="35dp"
        android:background="#dbdbdb">

		<TextView
		    android:id="@+id/textview_sort1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Sort By"
		    android:paddingTop="8dip"
		    android:textSize="14sp" />
    	
    	<Spinner
    	    android:id="@+id/spinner_sort1"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignBaseline="@id/textview_sort1"
    		android:layout_toRightOf="@id/textview_sort1"
    		android:paddingTop="8dip"
    		android:prompt="@string/sort_by"
    		android:textSize="12sp"/>
	 </RelativeLayout>
    	
     <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice"
        tools:listitem="@android:layout/simple_list_item_1" >

     </ListView>
        
</LinearLayout>
